<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="search">Search</string>
    <string name="media_library">Media Library</string>
    <string name="settings">Settings</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="share">Share</string>
    <string name="course" translatable="false">https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="support">Contact support</string>
    <string name="email" translatable="false">AnRobo07@yandex.ru</string>
    <string name="subject">Message to the developers of the Playlist Maker app</string>
    <string name="text">Thanks to the developers for a cool app!</string>
    <string name="user_agreement">User agreement</string>
    <string name="offer" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="empty_result">Nothing found</string>
    <string name="no_connection">Connection issues\n\nCan\'t load. Check your internet connection</string>
    <string name="update">Update</string>
</resources>