<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/title"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/standard_font_size" />

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:drawableEnd="@drawable/mag_glass"
            android:text="@string/search"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/media_library"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:drawableEnd="@drawable/music_player_svgrepo_com"
            android:text="@string/media_library"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:drawableEnd="@drawable/settings"
            android:text="@string/settings"
            android:textColor="@color/black"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>